my-website/versioned_docs/version-1.7.0/api/category/destination.mdx
---
title: "Destinations"
sidebarTitle: "Destinations"
description: "Bases: DestinationPlugin"
---
import { ParamField, ResponseField } from '@site/src/components/ApiField';


<a id="tabsdata.AzureDestination"></a>
<details>
<summary>AzureDestination</summary>


```python
class AzureDestination(
    uri: str | list [ str ],
    credentials: AzureCredentials,
    format: str | FileFormat = None,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Azure-file-based data outputs.

**Categories:** destination

<a id="tabsdata.AzureDestination.SupportedFormats"></a>
### `SupportedFormats`

```python
class SupportedFormats(
    * values,
)
```

Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

Enum for the supported formats for the AzureDestination.

<a id="tabsdata.AzureDestination.SupportedFormats.avro"></a>
<ResponseField name="avro">

</ResponseField>

<a id="tabsdata.AzureDestination.SupportedFormats.csv"></a>
<ResponseField name="csv">

</ResponseField>

<a id="tabsdata.AzureDestination.SupportedFormats.ndjson"></a>
<ResponseField name="ndjson">

</ResponseField>

<a id="tabsdata.AzureDestination.SupportedFormats.parquet"></a>
<ResponseField name="parquet">

</ResponseField>

<a id="tabsdata.AzureDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.AzureDestination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.AzureDestination.allow_fragments"></a>
<ResponseField name="allow_fragments" type="bool">
Whether to allow fragments in the output.

**Type:** bool
</ResponseField>

<a id="tabsdata.AzureDestination.credentials"></a>
<ResponseField name="credentials" type="AzureCredentials">
The credentials required to access Azure.

**Type:** AzureCredentials
</ResponseField>

<a id="tabsdata.AzureDestination.format"></a>
<ResponseField name="format" type="FileFormat">
The format of the file. If not provided, it will be inferred from the file extension of the URI.

**Type:** FileFormat
</ResponseField>

<a id="tabsdata.AzureDestination.uri"></a>
<ResponseField name="uri" type="str | list[str]">
‘az://path/to/files’.

**Type:** str | list [ str ]

**Type:** The URI of the files with format
</ResponseField>


</details>

<a id="tabsdata.BigQueryDest"></a>
<details>
<summary>BigQueryDest</summary>


```python
class BigQueryDest(
    conn: BigQueryConn,
    tables: TableSpec | None = None,
    if_table_exists: IfTableExistStrategySpec = 'append',
    schema_strategy: SchemaStrategySpec = 'update',
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

BigQuery based data outputs. The data is first stored in parquet files in a GCS bucket, and then loaded into the BigQuery tables.

**Categories:** destination

<a id="tabsdata.BigQueryDest.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: list [ LazyFrame | None ] | LazyFrame | None,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.BigQueryDest.conn"></a>
<ResponseField name="conn" type="BigQueryConn">

</ResponseField>

<a id="tabsdata.BigQueryDest.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.

**Type:** str
</ResponseField>

<a id="tabsdata.BigQueryDest.schema_strategy"></a>
<ResponseField name="schema_strategy" type="Literal['update', 'strict']">
The strategy to follow when appending to a table with an existing schema.

**Type:** str
</ResponseField>

<a id="tabsdata.BigQueryDest.tables"></a>
<ResponseField name="tables" type="list[str]| None">

</ResponseField>


</details>

<a id="tabsdata.DatabricksDestination"></a>
<details>
<summary>DatabricksDestination</summary>


```python
class DatabricksDestination(
    host_url: str,
    token: str | Secret,
    tables: list [ str ] | str,
    volume: str,
    catalog: str | None = None,
    schema: str | None = None,
    warehouse: str | None = None,
    warehouse_id: str | None = None,
    if_table_exists: Literal [ 'append' , 'replace' ] = 'append',
    schema_strategy: Literal [ 'update' , 'strict' ] = 'update',
    ** kwargs,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Databricks based data outputs.

**Categories:** destination

<a id="tabsdata.DatabricksDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> List[None | str]
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.DatabricksDestination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: List [ LazyFrame | None ] | LazyFrame | None,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.DatabricksDestination.write"></a>
#### `write`

```python
def write(
    files,
)
```

This method is used to write the files to the databricks. It is called from the stream method, and it is not intended to be called directly.

<a id="tabsdata.DatabricksDestination.host_url"></a>
<ResponseField name="host_url" type="str">

</ResponseField>

<a id="tabsdata.DatabricksDestination.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.

**Type:** str
</ResponseField>

<a id="tabsdata.DatabricksDestination.schema_strategy"></a>
<ResponseField name="schema_strategy" type="Literal['update', 'strict']">
The strategy to follow when appending to a table with an existing schema.

**Type:** str
</ResponseField>

<a id="tabsdata.DatabricksDestination.tables"></a>
<ResponseField name="tables" type="List[str]">

</ResponseField>

<a id="tabsdata.DatabricksDestination.token"></a>
<ResponseField name="token" type="Secret">

</ResponseField>


</details>

<a id="tabsdata.GCSDestination"></a>
<details>
<summary>GCSDestination</summary>


```python
class GCSDestination(
    uri: str | list [ str ],
    credentials: GCPCredentials,
    format: str | FileFormat = None,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

GCS-file-based data outputs.

**Categories:** destination

<a id="tabsdata.GCSDestination.SupportedFormats"></a>
### `SupportedFormats`

```python
class SupportedFormats(
    * values,
)
```

Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

Enum for the supported formats for the GCSDestination.

<a id="tabsdata.GCSDestination.SupportedFormats.avro"></a>
<ResponseField name="avro">

</ResponseField>

<a id="tabsdata.GCSDestination.SupportedFormats.csv"></a>
<ResponseField name="csv">

</ResponseField>

<a id="tabsdata.GCSDestination.SupportedFormats.ndjson"></a>
<ResponseField name="ndjson">

</ResponseField>

<a id="tabsdata.GCSDestination.SupportedFormats.parquet"></a>
<ResponseField name="parquet">

</ResponseField>

<a id="tabsdata.GCSDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.GCSDestination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.GCSDestination.allow_fragments"></a>
<ResponseField name="allow_fragments" type="bool">
Whether to allow fragments in the output.

**Type:** bool
</ResponseField>

<a id="tabsdata.GCSDestination.credentials"></a>
<ResponseField name="credentials" type="GCPCredentials">
The credentials required to access GCS.

**Type:** GCPCredentials
</ResponseField>

<a id="tabsdata.GCSDestination.format"></a>
<ResponseField name="format" type="FileFormat">
The format of the file. If not provided, it will be inferred from the file extension of the URI.

**Type:** FileFormat
</ResponseField>

<a id="tabsdata.GCSDestination.uri"></a>
<ResponseField name="uri" type="str | list[str]">
‘gs://path/to/files’.

**Type:** str | list [ str ]

**Type:** The URI of the files with format
</ResponseField>


</details>

<a id="tabsdata.LocalFileDestination"></a>
<details>
<summary>LocalFileDestination</summary>


```python
class LocalFileDestination(
    path: str | list [ str ],
    format: str | FileFormat = None,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

LocalFile-based data outputs.

**Categories:** destination

<a id="tabsdata.LocalFileDestination.SupportedFormats"></a>
### `SupportedFormats`

```python
class SupportedFormats(
    * values,
)
```

Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

Enum for the supported formats for the LocalFileDestination.

<a id="tabsdata.LocalFileDestination.SupportedFormats.avro"></a>
<ResponseField name="avro">

</ResponseField>

<a id="tabsdata.LocalFileDestination.SupportedFormats.csv"></a>
<ResponseField name="csv">

</ResponseField>

<a id="tabsdata.LocalFileDestination.SupportedFormats.ndjson"></a>
<ResponseField name="ndjson">

</ResponseField>

<a id="tabsdata.LocalFileDestination.SupportedFormats.parquet"></a>
<ResponseField name="parquet">

</ResponseField>

<a id="tabsdata.LocalFileDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.LocalFileDestination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.LocalFileDestination.allow_fragments"></a>
<ResponseField name="allow_fragments" type="bool">
Whether to allow fragments in the output.

**Type:** bool
</ResponseField>

<a id="tabsdata.LocalFileDestination.format"></a>
<ResponseField name="format" type="FileFormat">
The format of the file or files. If not provided, it will be inferred from the file extension in the path.

**Type:** FileFormat
</ResponseField>

<a id="tabsdata.LocalFileDestination.path"></a>
<ResponseField name="path" type="str | list[str]">
The path or paths to store the files.

**Type:** str | list [ str ]
</ResponseField>


</details>

<a id="tabsdata.MSSQLDestination"></a>
<details>
<summary>MSSQLDestination</summary>


```python
class MSSQLDestination(
    connection_string: str,
    destination_table: str | list [ str ],
    credentials: dict | UserPasswordCredentials | None = None,
    server: str | Secret = None,
    database: str | Secret = None,
    driver: str | Secret = None,
    if_table_exists: Literal [ 'append' , 'replace' ] = 'append',
    chunk_size: int = 50000,
    ** kwargs,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

MSSQL-based data outputs.

**Categories:** destination

<a id="tabsdata.MSSQLDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> list[None | str]
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.MSSQLDestination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: list [ LazyFrame | None ] | LazyFrame | None,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.MSSQLDestination.write"></a>
#### `write`

```python
def write(
    files,
)
```

This method is used to write the files to the database. It is called from the stream method, and it is not intended to be called directly.

<a id="tabsdata.MSSQLDestination.connection_string"></a>
<ResponseField name="connection_string" type="str">
Get the connection string for the database.

**Returns:** The connection string.

**Return type:** str
</ResponseField>

<a id="tabsdata.MSSQLDestination.credentials"></a>
<ResponseField name="credentials" type="UserPasswordCredentials | None">
The credentials required to access Microsoft SQL Server. If no credentials were provided, it will return None.

**Type:** UserPasswordCredentials | None
</ResponseField>

<a id="tabsdata.MSSQLDestination.destination_table"></a>
<ResponseField name="destination_table" type="list[str]">
Get the destination table(s) where the data will be stored.

**Returns:** The destination table(s).

**Return type:** list [ str ]
</ResponseField>

<a id="tabsdata.MSSQLDestination.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
Returns the value of the if_table_exists property. This property determines what to do if the table already exists.
</ResponseField>


</details>

<a id="tabsdata.MariaDBDest"></a>
<details>
<summary>MariaDBDest</summary>


```python
class MariaDBDest(
    conn: MariaDBConn,
    destination_tables: str | list [ str ],
    if_table_exists: Literal [ 'append' , 'replace' ] = 'append',
    transactional: bool = True,
    chunk_size: Annotated [ int , Gt ( gt = 0 ) ] = 100000,
    loader: Literal [ 'polars_sqlalchemy' ] = 'polars_sqlalchemy',
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Destination plugin for writing data to MySQL.

**Categories:** destination

<a id="tabsdata.MariaDBDest.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: list [ LazyFrame | None ],
)
```

Store the results into the MariaDB database.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The working directory where the results are stored.
</ParamField>

<ParamField path="results" required>
  The results to store in the SQL destination.
</ParamField>

<a id="tabsdata.MariaDBDest.chunk_size"></a>
<ResponseField name="chunk_size" type="int">
The chunk size for writing large results in batches.
</ResponseField>

<a id="tabsdata.MariaDBDest.conn"></a>
<ResponseField name="conn" type="MariaDBConn">
The MariaDB connection configuration.
</ResponseField>

<a id="tabsdata.MariaDBDest.destination_tables"></a>
<ResponseField name="destination_tables" type="list[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.
</ResponseField>

<a id="tabsdata.MariaDBDest.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.
</ResponseField>

<a id="tabsdata.MariaDBDest.loader"></a>
<ResponseField name="loader" type="Literal['polars_sqlalchemy']">
The data processing loader to use for executing DB write operation.
</ResponseField>

<a id="tabsdata.MariaDBDest.transactional"></a>
<ResponseField name="transactional" type="bool">
Whether to use transactions for writing data to ensure consistency.
</ResponseField>


</details>

<a id="tabsdata.MariaDBDestination"></a>
<details>
<summary>MariaDBDestination</summary>


```python
class MariaDBDestination(
    ** kwargs,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

MariaDB-based data outputs.

**Categories:** destination

<a id="tabsdata.MariaDBDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> list[str | None]
```

Store the results in the SQL destination.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The working directory where the results will be stored.
</ParamField>

<ParamField path="results" required>
  The results to store in the SQL destination.
</ParamField>

<a id="tabsdata.MariaDBDestination.write"></a>
#### `write`

```python
def write(
    files: list [ str | None ],
)
```

Given a file or a list of files, write to the desired destination. Note: this method *might* materialize the data in the files it receives, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="files" type="list [ str | None ]" required>
  The file or files to be stored in the final destination.
</ParamField>

<a id="tabsdata.MariaDBDestination.credentials"></a>
<ResponseField name="credentials" type="UserPasswordCredentials">
The credentials required to access the MariaDB database.

**Type:** UserPasswordCredentials
</ResponseField>

<a id="tabsdata.MariaDBDestination.destination_table"></a>
<ResponseField name="destination_table" type="str | List[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.

**Type:** str | List[ str ]
</ResponseField>

<a id="tabsdata.MariaDBDestination.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.

**Type:** str
</ResponseField>

<a id="tabsdata.MariaDBDestination.uri"></a>
<ResponseField name="uri" type="str">
The URI of the database where the data is going to be stored.

**Type:** str
</ResponseField>


</details>

<a id="tabsdata.MongoDBDestination"></a>
<details>
<summary>MongoDBDestination</summary>


```python
class MongoDBDestination(
    uri: str,
    collections_with_ids: tuple [ str , str | None ] | List [ tuple [ str , str | None ] ],
    credentials: UserPasswordCredentials = None,
    connection_options: dict = None,
    if_collection_exists: Literal [ 'append' , 'replace' ] = 'append',
    use_trxs: bool = False,
    docs_per_trx: int = 1000,
    maintain_order: bool = False,
    update_existing: bool = True,
    fail_on_duplicate_key: bool = True,
    log_intermediate_files: bool = False,
    ** kwargs,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

MongoDB-based data outputs.

**Categories:** destination

<a id="tabsdata.MongoDBDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> List[None | List[str]]
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.MongoDBDestination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: List [ LazyFrame | None ] | LazyFrame | None,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.MongoDBDestination.write"></a>
#### `write`

```python
def write(
    files,
)
```

This method is used to write the files to the database. It is called from the stream method, and it is not intended to be called directly.

<a id="tabsdata.MongoDBDestination.collections_with_ids"></a>
<ResponseField name="collections_with_ids" type="List[tuple[str, str | None]]">

</ResponseField>

<a id="tabsdata.MongoDBDestination.connection_options"></a>
<ResponseField name="connection_options" type="dict">

</ResponseField>

<a id="tabsdata.MongoDBDestination.credentials"></a>
<ResponseField name="credentials" type="UserPasswordCredentials | None">

</ResponseField>

<a id="tabsdata.MongoDBDestination.if_collection_exists"></a>
<ResponseField name="if_collection_exists" type="Literal['append', 'replace']">

</ResponseField>

<a id="tabsdata.MongoDBDestination.uri"></a>
<ResponseField name="uri" type="str">

</ResponseField>


</details>

<a id="tabsdata.MySQLDest"></a>
<details>
<summary>MySQLDest</summary>


```python
class MySQLDest(
    conn: MySQLConn,
    destination_tables: str | list [ str ],
    if_table_exists: Literal [ 'append' , 'replace' ] = 'append',
    transactional: bool = True,
    chunk_size: Annotated [ int , Gt ( gt = 0 ) ] = 100000,
    loader: Literal [ 'polars_sqlalchemy' ] = 'polars_sqlalchemy',
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Destination plugin for writing data to MySQL.

**Categories:** destination

<a id="tabsdata.MySQLDest.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: list [ LazyFrame | None ],
)
```

Store the results into the MySQL database.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The working directory where the results are stored.
</ParamField>

<ParamField path="results" required>
  The results to store in the SQL destination.
</ParamField>

<a id="tabsdata.MySQLDest.chunk_size"></a>
<ResponseField name="chunk_size" type="int">
The chunk size for writing large results in batches.
</ResponseField>

<a id="tabsdata.MySQLDest.conn"></a>
<ResponseField name="conn" type="MySQLConn">
The MySQL connection configuration.
</ResponseField>

<a id="tabsdata.MySQLDest.destination_tables"></a>
<ResponseField name="destination_tables" type="list[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.
</ResponseField>

<a id="tabsdata.MySQLDest.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.
</ResponseField>

<a id="tabsdata.MySQLDest.loader"></a>
<ResponseField name="loader" type="Literal['polars_sqlalchemy']">
The data processing loader to use for executing DB write operation.
</ResponseField>

<a id="tabsdata.MySQLDest.transactional"></a>
<ResponseField name="transactional" type="bool">
Whether to use transactions for writing data to ensure consistency.
</ResponseField>


</details>

<a id="tabsdata.MySQLDestination"></a>
<details>
<summary>MySQLDestination</summary>


```python
class MySQLDestination(
    ** kwargs,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

MySQL-based data outputs.

**Categories:** destination

<a id="tabsdata.MySQLDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> list[str | None]
```

Store the results in the SQL destination.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The working directory where the results will be stored.
</ParamField>

<ParamField path="results" required>
  The results to store in the SQL destination.
</ParamField>

<a id="tabsdata.MySQLDestination.write"></a>
#### `write`

```python
def write(
    files: list [ str | None ],
)
```

Given a file or a list of files, write to the desired destination. Note: this method *might* materialize the data in the files it receives, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="files" type="list [ str | None ]" required>
  The file or files to be stored in the final destination.
</ParamField>

<a id="tabsdata.MySQLDestination.credentials"></a>
<ResponseField name="credentials" type="UserPasswordCredentials">
The credentials required to access the MySQLDatabase.

**Type:** UserPasswordCredentials
</ResponseField>

<a id="tabsdata.MySQLDestination.destination_table"></a>
<ResponseField name="destination_table" type="str | List[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.

**Type:** str | List[ str ]
</ResponseField>

<a id="tabsdata.MySQLDestination.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.

**Type:** str
</ResponseField>

<a id="tabsdata.MySQLDestination.uri"></a>
<ResponseField name="uri" type="str">
The URI of the database where the data is going to be stored.

**Type:** str
</ResponseField>


</details>

<a id="tabsdata.OracleDestination"></a>
<details>
<summary>OracleDestination</summary>


```python
class OracleDestination(
    uri: str,
    destination_table: List [ str ] | str,
    credentials: UserPasswordCredentials = None,
    if_table_exists: Literal [ 'append' , 'replace' ] = 'append',
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Oracle-based data outputs.

**Categories:** destination

<a id="tabsdata.OracleDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> list[str | None]
```

Store the results in the SQL destination.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The working directory where the results will be stored.
</ParamField>

<ParamField path="results" required>
  The results to store in the SQL destination.
</ParamField>

<a id="tabsdata.OracleDestination.write"></a>
#### `write`

```python
def write(
    files: list [ str | None ],
)
```

Given a file or a list of files, write to the desired destination. Note: this method *might* materialize the data in the files it receives, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="files" type="list [ str | None ]" required>
  The file or files to be stored in the final destination.
</ParamField>

<a id="tabsdata.OracleDestination.credentials"></a>
<ResponseField name="credentials" type="UserPasswordCredentials">
The credentials required to access the Oracle database.

**Type:** UserPasswordCredentials
</ResponseField>

<a id="tabsdata.OracleDestination.destination_table"></a>
<ResponseField name="destination_table" type="str | List[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.

**Type:** str | List[ str ]
</ResponseField>

<a id="tabsdata.OracleDestination.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.

**Type:** str
</ResponseField>

<a id="tabsdata.OracleDestination.uri"></a>
<ResponseField name="uri" type="str">
The URI of the database where the data is going to be stored.

**Type:** str
</ResponseField>


</details>

<a id="tabsdata.PostgresDest"></a>
<details>
<summary>PostgresDest</summary>


```python
class PostgresDest(
    conn: PostgresConn,
    destination_tables: str | list [ str ],
    if_table_exists: Literal [ 'append' , 'replace' ] = 'append',
    transactional: bool = True,
    chunk_size: Annotated [ int , Gt ( gt = 0 ) ] = 100000,
    loader: Literal [ 'polars_sqlalchemy' ] = 'polars_sqlalchemy',
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Destination plugin for writing data to PostgreSQL.

**Categories:** destination

<a id="tabsdata.PostgresDest.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: list [ LazyFrame | None ],
)
```

Store the results into the PostgreSQL database.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The working directory where the results are stored.
</ParamField>

<ParamField path="results" required>
  The results to store in the SQL destination.
</ParamField>

<a id="tabsdata.PostgresDest.chunk_size"></a>
<ResponseField name="chunk_size" type="int">
The chunk size for writing large results in batches.
</ResponseField>

<a id="tabsdata.PostgresDest.conn"></a>
<ResponseField name="conn" type="PostgresConn">
The Postgres connection configuration.
</ResponseField>

<a id="tabsdata.PostgresDest.destination_tables"></a>
<ResponseField name="destination_tables" type="list[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.
</ResponseField>

<a id="tabsdata.PostgresDest.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.
</ResponseField>

<a id="tabsdata.PostgresDest.loader"></a>
<ResponseField name="loader" type="Literal['polars_sqlalchemy']">
The data processing loader to use for executing DB write operation.
</ResponseField>

<a id="tabsdata.PostgresDest.transactional"></a>
<ResponseField name="transactional" type="bool">
Whether to use transactions for writing data to ensure consistency.
</ResponseField>


</details>

<a id="tabsdata.PostgresDestination"></a>
<details>
<summary>PostgresDestination</summary>


```python
class PostgresDestination(
    ** kwargs,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Postgres-based data outputs.

**Categories:** destination

<a id="tabsdata.PostgresDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> list[str | None]
```

Store the results in the SQL destination.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The working directory where the results will be stored.
</ParamField>

<ParamField path="results" required>
  The results to store in the SQL destination.
</ParamField>

<a id="tabsdata.PostgresDestination.write"></a>
#### `write`

```python
def write(
    files: list [ str | None ],
)
```

Given a file or a list of files, write to the desired destination. Note: this method *might* materialize the data in the files it receives, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="files" type="list [ str | None ]" required>
  The file or files to be stored in the final destination.
</ParamField>

<a id="tabsdata.PostgresDestination.credentials"></a>
<ResponseField name="credentials" type="UserPasswordCredentials">
The credentials required to access the Postgres database.

**Type:** UserPasswordCredentials
</ResponseField>

<a id="tabsdata.PostgresDestination.destination_table"></a>
<ResponseField name="destination_table" type="str | List[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.

**Type:** str | List[ str ]
</ResponseField>

<a id="tabsdata.PostgresDestination.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
The strategy to follow when the table already exists.

**Type:** str
</ResponseField>

<a id="tabsdata.PostgresDestination.uri"></a>
<ResponseField name="uri" type="str">
The URI of the database where the data is going to be stored.

**Type:** str
</ResponseField>


</details>

<a id="tabsdata.S3Destination"></a>
<details>
<summary>S3Destination</summary>


```python
class S3Destination(
    uri: str | list [ str ],
    credentials: S3Credentials,
    format: str | FileFormat = None,
    region: str = None,
    catalog: AWSGlue = None,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

S3-file-based data outputs.

**Categories:** destination

<a id="tabsdata.S3Destination.SupportedFormats"></a>
### `SupportedFormats`

```python
class SupportedFormats(
    * values,
)
```

Bases: [`Enum`](https://docs.python.org/3/library/enum.html#enum.Enum)

Enum for the supported formats for the S3Destination.

<a id="tabsdata.S3Destination.SupportedFormats.avro"></a>
<ResponseField name="avro">

</ResponseField>

<a id="tabsdata.S3Destination.SupportedFormats.csv"></a>
<ResponseField name="csv">

</ResponseField>

<a id="tabsdata.S3Destination.SupportedFormats.ndjson"></a>
<ResponseField name="ndjson">

</ResponseField>

<a id="tabsdata.S3Destination.SupportedFormats.parquet"></a>
<ResponseField name="parquet">

</ResponseField>

<a id="tabsdata.S3Destination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.S3Destination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.S3Destination.allow_fragments"></a>
<ResponseField name="allow_fragments" type="bool">
Whether to allow fragments in the output.

**Type:** bool
</ResponseField>

<a id="tabsdata.S3Destination.catalog"></a>
<ResponseField name="catalog" type="AWSGlue">
The catalog to store the data in.

**Type:** Catalog
</ResponseField>

<a id="tabsdata.S3Destination.credentials"></a>
<ResponseField name="credentials" type="S3Credentials | S3AccessKeyCredentials">
The credentials required to access the S3 bucket.

**Type:** S3Credentials
</ResponseField>

<a id="tabsdata.S3Destination.format"></a>
<ResponseField name="format" type="FileFormat">
The format of the file. If not provided, it will be inferred from the file.

**Type:** FileFormat
</ResponseField>

<a id="tabsdata.S3Destination.region"></a>
<ResponseField name="region" type="str | None">
The region where the S3 bucket is located.

**Type:** str
</ResponseField>

<a id="tabsdata.S3Destination.uri"></a>
<ResponseField name="uri" type="str | list[str]">
‘s3://path/to/files’.

**Type:** str | list [ str ]

**Type:** The URI of the files with format
</ResponseField>


</details>

<a id="tabsdata.SnowflakeDestination"></a>
<details>
<summary>SnowflakeDestination</summary>


```python
class SnowflakeDestination(
    connection_parameters: dict,
    destination_table: List [ str ] | str,
    if_table_exists: Literal [ 'append' , 'replace' ] = 'append',
    stage: str | None = None,
    ** kwargs,
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Snowflake based data outputs.

**Categories:** destination

<a id="tabsdata.SnowflakeDestination.chunk"></a>
#### `chunk`

```python
def chunk(
    working_dir: str,
    * results: LazyFrame | None,
) -> List[None | str]
```

Trigger the exporting of the data to local parquet chunks. This method will receive the resulting data from the user function and must store it in the local system as parquet files, using the working_dir. Note: This method should *not* materialize the data, it should only store it in the local system.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** A list of the intermediate files created

<a id="tabsdata.SnowflakeDestination.stream"></a>
#### `stream`

```python
def stream(
    working_dir: str,
    * results: List [ LazyFrame | None ] | LazyFrame | None,
)
```

Trigger the exporting of the data. This method will receive the resulting data from the user function and must store it in the desired location. Note: this method *might* materialize the data provided in a single chunk generated by the chunk function if invoked, so chunks should be of an appropriate size.

**Parameters:**

<ParamField path="working_dir" type="str" required>
  The folder where any intermediate files generated must be stored (this refers to temporary files that will be deleted after the execution of the plugin, not the final destination of the data)
</ParamField>

<ParamField path="results" required>
  The data to be exported. It is a list of polars LazyFrames or None.
</ParamField>

**Returns:** None

<a id="tabsdata.SnowflakeDestination.write"></a>
#### `write`

```python
def write(
    files,
)
```

This method is used to write the files to the database. It is called from the stream method, and it is not intended to be called directly.

<a id="tabsdata.SnowflakeDestination.destination_table"></a>
<ResponseField name="destination_table" type="list[str]">
Get the destination table(s) where the data will be stored.

**Returns:** The destination table(s).

**Return type:** str | list [ str ]
</ResponseField>

<a id="tabsdata.SnowflakeDestination.if_table_exists"></a>
<ResponseField name="if_table_exists" type="Literal['append', 'replace']">
Returns the value of the if_table_exists property. This property determines what to do if the table already exists.
</ResponseField>


</details>

<a id="tabsdata.TableOutput"></a>
<details>
<summary>TableOutput</summary>


```python
class TableOutput(
    table: str | list [ str ],
)
```

Bases: [`DestinationPlugin`](/versions/1.7.0/api/module/tabsdata#tabsdata.DestinationPlugin)

Table-based data outputs.

**Categories:** destination

<a id="tabsdata.TableOutput.table"></a>
<ResponseField name="table" type="str | list[str]">
The table(s) to create. If multiple tables are provided, they must be provided as a list.

**Type:** str | list [ str ]
</ResponseField>


</details>
